force-app/main/default/objects/InventoryHistory__c/InventoryHistory__c.object-meta.xml
<CustomObject>
    <label>InventoryHistory</label>
    <nameField>
        <displayFormat>InvHist-{000}</displayFormat>
        <label>Inventory History No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InventoryHistory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>