force-app/main/default/objects/InventoryHistory__c/fields/Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line Item</label>
    <referenceTo>InvoiceLineProduct__c</referenceTo>
    <relationshipLabel>InventoryHistory</relationshipLabel>
    <relationshipName>InventoryHistory</relationshipName>
    <type>Lookup</type>
</CustomField>