force-app/main/default/objects/InventoryHistory__c/fields/Invoiced_Line_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Line_Item_Quantity__c</fullName>
    <label>Invoiced Line Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>