force-app/main/default/objects/InventoryHistory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>InventoryHistory</relationshipLabel>
    <relationshipName>InventoryHistory</relationshipName>
    <type>Lookup</type>
</CustomField>